--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react-phone",
     "react-international-phone"
   ],
-  "private": false,
   "author": "Yurii Brusentsov <yuriybrusentsov@gmail.com>",
   "license": "MIT",
   "exports": {
@@ -92,6 +91,7 @@
     "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.0",
     "@swc/core": "^1.3.76",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
@@ -147,5 +147,6 @@
   "publishConfig": {
     "access": "public"
   },
-  "homepage": "https://react-international-phone-docs.vercel.app/"
+  "homepage": "https://react-international-phone-docs.vercel.app/",
+  "packageManager": "yarn@4.6.0"
 }
